<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:layout_height="80dp"
        android:background="#fff"
        android:text="@string/techmarket_uz"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_marginTop="10dp"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:layout_alignBottom="@+id/textView">
        <androidx.cardview.widget.CardView
            android:id="@+id/uz_cardView"
            android:layout_width="30dp"
            android:layout_margin="4dp"
            android:layout_height="30dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/uz"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/eng_cardView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardCornerRadius="50dp"
            android:layout_margin="4dp"
            app:cardElevation="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eng"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ru_cardView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="4dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ru"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>