<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.MakeOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:gravity="center">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff"
                android:layout_margin="4dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="4dp"
                android:padding="4dp">
                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="6dp"
                    app:tint="@color/black"
                    android:src="@drawable/ic_left_arrow"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/make_order"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="iPhone 12 pro max"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff"
                android:layout_margin="4dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="4dp"
                android:padding="4dp"
                android:visibility="invisible">
                <ImageView
                    android:id="@+id/favourite_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="6dp"
                    android:src="@drawable/ic_free_star"
                    app:tint="@color/black" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/textInput_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/delivery_address"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:id="@+id/edit_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center">
        <TextView
            android:id="@+id/final_price_textView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingStart="4dp"
            android:layout_margin="10dp"
            tools:text="12 000"
            tools:ignore="RtlSymmetry" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/final_make_order_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            app:cornerRadius="22dp"
            android:shadowDy="10"
            android:text="@string/make_order"
            android:shadowColor="@color/colorAccent"
            android:layout_margin="10dp"/>
    </LinearLayout>

</FrameLayout>